# reliable-rag

./: .env.example  .gitignore  CHUNKING.md  LEARN.md  LIBRARIES.md  LICENSE  README.md  chainlit.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
.streamlit/: config.toml
app/: chainlit_app.py  streamlit_dashboard.py
eval/: questions.yaml  run_ragas.py  testset_gen.py
public/: custom.css
src/reliable_rag/: __init__.py  cli.py  condense.py  config.py  cost.py  evaluate.py  feedback.py  graph.py  ingest.py  models.py  observability.py  pipeline.py  retrieval.py  schemas.py  trace.py
src/reliable_rag/chunkers/: __init__.py  markdown_header_chunker.py
src/reliable_rag/gates/: __init__.py  _common.py  generate.py  grade.py  verify.py
tests/: conftest.py  test_condense.py  test_cost.py  test_gates.py  test_graph.py  test_ingest.py  test_retrieval.py
