[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reliable-rag"
version = "0.1.0"
description = "Reliable RAG (Grade / Verify / Trace gates) + RAGAS evaluation over the Cambium cnWave 60 GHz docs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kiran Avva" }]
keywords = ["rag", "ragas", "langchain", "langgraph", "claude", "retrieval-augmented-generation"]

# Core runtime dependencies. The two UIs and the optional tracing backends are
# kept as *extras* (below) so the core pipeline + eval install cleanly without
# dragging in Chainlit/Streamlit/Phoenix pin conflicts. See requirements.txt.
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",   # BM25Retriever, EnsembleRetriever
    "langchain-chroma>=0.2",
    "chromadb>=0.5",
    "langgraph>=0.2",
    "ragas>=0.3,<0.4",
    "rank-bm25>=0.2",
    "tiktoken>=0.7",      # exact token counts for embedding (ingest) cost
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "pyyaml>=6",
    "rich>=13",
    "typer>=0.12",
]

[project.optional-dependencies]
chat = ["chainlit>=1.3"]                 # the gated-chat demo UI
dashboard = ["streamlit>=1.39", "plotly>=5.22"]  # the RAGAS dashboard UI
tracing = [                              # optional local/hosted trace explorers
    "arize-phoenix>=5",
    "openinference-instrumentation-langchain>=0.1",
    "langsmith>=0.1",
]
dev = ["pytest>=8", "pytest-mock>=3"]
# Convenience: everything at once.
all = [
    "chainlit>=1.3",
    "streamlit>=1.39",
    "plotly>=5.22",
    "pytest>=8",
    "pytest-mock>=3",
]

[project.scripts]
reliable-rag = "reliable_rag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
